-- add signIn method
