# auth/DTO.go
@@ -16,3 +16,16 @@ type SignOutDTO struct {
 type RolesReqDTO struct {
 	RoleID string `json:"role_id" validate:"required"`
 }
+
+type RolesResp struct {
+	Id       string `json:"id"`
+	RoleType string `json:"role_type"`
+}
+
+type UserMeResp struct {
+	Id        string    `json:"id"`
+	Firstname string    `json:"firstname"`
+	Lastname  string    `json:"lastname"`
+	Role      RolesResp `json:"role"`
+	Username  string    `json:"username"`
+}
